<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.UserDashboard"
    tools:openDrawer="start"
    android:id="@+id/drawer_layout">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/main_menu"/>


    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!-- part1 -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <ImageView
                android:id="@+id/menu_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/menu_icon" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="5dp"
                android:src="@drawable/logo_transpa" />
            <!-- part2 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textdashboard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/dashboard"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

            </RelativeLayout>

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <!-- part3 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center">
                    <!-- 5 linear layouts as history and all -->

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_margin="5dp"
                            android:background="@color/white"
                            android:elevation="8dp">

                            <ImageButton
                                android:id="@+id/history"
                                android:layout_width="55dp"
                                android:layout_height="55dp"
                                android:background="#00000000"
                                android:onClick="historyclick"
                                android:layout_centerInParent="true"
                                android:src="@drawable/clock" />
                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/History"
                            android:textColor="@color/black"
                            android:textAlignment="center" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_margin="5dp"
                            android:background="@color/white"
                            android:elevation="8dp">

                            <ImageButton
                                android:id="@+id/notice"
                                android:layout_width="55dp"
                                android:layout_height="55dp"
                                android:background="#00000000"
                                android:onClick="noticeclick"
                                android:layout_centerInParent="true"
                                android:src="@drawable/honor" />
                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/Notices"
                            android:textColor="@color/black"
                            android:textAlignment="center" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_margin="5dp"
                            android:background="@color/white"
                            android:elevation="8dp">

                            <ImageButton
                                android:id="@+id/shop"
                                android:layout_width="55dp"
                                android:layout_height="55dp"
                                android:background="#00000000"
                                android:onClick="vehicleclick"
                                android:layout_centerInParent="true"
                                android:src="@drawable/shop1" />
                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="Shop"
                            android:textColor="@color/black"
                            android:textAlignment="center" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_margin="5dp"
                            android:background="@color/white"
                            android:elevation="8dp">

                            <ImageButton
                                android:id="@+id/localhelp"
                                android:layout_width="55dp"
                                android:layout_height="55dp"
                                android:background="#00000000"
                                android:onClick="localhelpclick"
                                android:layout_centerInParent="true"
                                android:src="@drawable/sweep1" />
                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/Local_help"
                            android:textColor="@color/black"
                            android:textAlignment="center" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_margin="5dp"
                            android:background="@color/white"
                            android:elevation="8dp">

                            <ImageButton
                                android:id="@+id/Emergency"
                                android:layout_width="55dp"
                                android:layout_height="55dp"
                                android:background="#00000000"
                                android:onClick="emergencyclick"
                                android:layout_centerInParent="true"
                                android:src="@drawable/ambulance1" />
                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/Emergency"
                            android:textColor="@color/black"
                            android:textAlignment="center" />
                    </LinearLayout>


                </LinearLayout>
                <!-- part4 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/request"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:background="@color/mintgreen"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:gravity="center_horizontal"
                            android:text="@string/Requests"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/request_recycle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</androidx.drawerlayout.widget.DrawerLayout>