<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mintgreen"
    tools:context=".User.UserProfile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--actionbar-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize">

                <ImageView
                    android:id="@+id/back_profile1"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/back"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Profile"
                    android:textSize="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/black"/>
            </RelativeLayout>
            <!--image-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:elevation="0dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@color/secondblue">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/man"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="10dp"/>



                </RelativeLayout>
            </LinearLayout>
            <!--details-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">
                <!-- name -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/profName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Name"
                    android:layout_marginBottom="10dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_identity"
                        android:drawablePadding="10dp">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>
                <!-- Email -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/profEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:layout_marginBottom="10dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_email"
                        android:drawablePadding="10dp">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>
                <!-- building name -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/profBuildingname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Buildingname"
                    android:layout_marginBottom="10dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_building"
                        android:drawablePadding="10dp">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>
                <!-- flatno -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/profFlatno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/FlatNo."
                    android:layout_marginBottom="10dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_home"
                        android:drawablePadding="10dp">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>
                <!-- phone -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/profPhoneno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/PhoneNo."
                    android:layout_marginBottom="10dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_phone"
                        android:drawablePadding="10dp">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>
            <!--button-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="-10dp">
                <Button
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/round_button"
                    android:backgroundTint="@color/colorPrimary"
                    android:drawableRight="@drawable/ic_edit"
                    android:drawablePadding="10dp"
                    android:text="Edit Profile">

                </Button>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>